# ai-delver-client

./: .gitignore  .gitmodules  Dockerfile  Makefile  Pipfile  README.md  app.py  bootstrap.py  config.json  docker-compose.yml  entrypoint.sh  game.py  pyproject.toml  pyrightconfig.json  run.sh  todo.txt
data/level_saves/: My custom level.dill  level.pkl  nome.dill  teste1.dill  teste2.dill
editor/: config.json  editor.py  theme.py
editor/components/: __init__.py  mouse_wheel_scrollable_frame.py  svg_image.py
editor/level/: level.py  level_factory.py  level_selector.py  level_toggler.py
game/: camera.py  config.json  controls.py  game.py  groups.py  tilemap_factory.py  tilemap_renderer.py
game/entities/: entity.py  player.py
game/tilemap/: create_tile_on_click.py  tilemap_factory.py
intelligence/: Dockerfile  pyproject.docker.toml  pyproject.toml
level-lib/level/: config.json  level.py
runtime-lib/: pyproject.toml
src/: __init__.py  agent_loader.py  app_manager.py  bootstrap.py  config.json  config.py  direct_ai.py  direct_game.py  level_loader.py  main.py  simulation_test.py  training_manager.py  training_state_manager.py  trajectory_stats_state_manager.py
src/api/: __init__.py  router.py  server.py
src/app/: __init__.py  app.py  navbar.py
src/app_manager/: app_manager.py
src/canvas_controller/: __init__.py  canvas_controller.py
src/client_requests/: __init__.py  _trajectory_listener.py  client_requester.py  listen_for_replays.py  listen_for_trajectories.py  send_training_request.py
src/core/: app_manager.py
src/editor/: __init__.py  config.json  editor.py  navbar.py  theme.py
src/game/: camera.py  config.json  controls.py  game.py  game_manager.py
src/level/: __init__.py  level.py  level_toggler.py
src/runtime/: runtime.py  space.py
src/runtime_view/: camera.py  view_controls.py  viewable_runtime.py
src/utils/: __init__.py  get_available_space.py  json_to_sha256.py  (+1 more)
tileset/: autotile_tile.py  tile.py  tilemap.py  tilemap_layer.py  tileset.py
tileset_manager/: __init__.py  tilemap.py  tilemap_layer.py  tileset.py
utils/: __init__.py  bresenham_line.py  plot_bytes_image.py  translate_mouse_coords.py
(+449 files in other folders)
