[tool.poetry]
name = "ai-delver"
version = "0.1.0"
description = ""
authors = ["Dante Ferreira"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
customtkinter = "*"
pillow = "*"
cairosvg = "*"
blinker = "*"
dill = "*"
numpy = "*"
six = "*"
pyglet = "*"
matplotlib = "*"
fastapi = "*"
uvicorn = "*"
requests = "*"
websockets = "*"

# Local editable packages
pytiling = { path = "./pytiling-lib", develop = true }
ai_delver_runtime = { path = "./ai_delver_runtime", develop = true }
level = { path = "./level-lib", develop = true }

[tool.poetry.group.dev.dependencies]
# e.g. pytest = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
